Fix: Correções de bugs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <input type="text" placeholder="Email Adress" class="text1" />
           <input type="text" placeholder="Passowrd" class="text1" />
 
-          <h2 class="colorSubtitle2 text1">Forgot Passowrd?</h2>
+          <h2 class="colorSubtitle2 text1 form__forgotPass">Forgot Passowrd?</h2>
 
           <button class="bgThird text1">Login</button>
           <button
